fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,6 +73,7 @@
   @apply p-4;
   @apply my-4;
   @apply border;
+  overflow: scroll;
 }
 
 
